# paint

./: CMakeLists.txt  main.cpp
widgets/: CMakeLists.txt  resources.qrc
widgets/include/: InsertWindow.h  MainWindow.h  RenderArea.h  ResizeWindow.h  WidthWindow.h
widgets/src/: InsertWindow.cpp  MainWindow.cpp  RenderArea.cpp  ResizeWindow.cpp  WidthWindow.cpp
